[package]
name = "dwitch"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["netns"]

[dependencies]
log = { version = "0.4" }
serde = { version = "1.0", features = ["derive"] }
bincode = { version = "1.3" }
nix = { version = "0.29", features = [] }
quiche = { version = "0.22" }

netns = { path = "netns" }
