[package]
name = "dwitch"
version = "0.1.0"
edition = "2021"

[features]
debug_console = []

[dependencies]
clap = { version = "4.5", features = ["derive"] }

eyre = "0.6"
color-eyre = { version = "0.6", default-features = false }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
console-subscriber = "0.4.1"

serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
toml = "0.8"

tokio = { version = "1.0", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "io-util",
    "sync",
    "fs",
    "tracing",
] }

tappers = { version = "0.4", features = ["tokio"] }

common = { path = "../common" }
netns = { path = "../netns" }
protocol = { path = "../protocol" }
